[workspace]
members = ["bevy_connection", "examples/*"]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.15.0", features = ["bevy_remote"] }
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.134" }
reqwest = { version = "*", features = ["blocking", "json"] }
bevy_connection = { path = "bevy_connection" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
